--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -107,7 +107,6 @@
      eprint    = "hep-ph/0508200",
      archivePrefix = "arXiv",
      doi       = "10.1142/S0217751X06033271",
-     SLACcitation  = "%%CITATION = HEP-PH/0508200;%%"
 }
 
 @Article{islam07,
@@ -116,7 +115,6 @@
      year      = "2007",
 	 journal	= "12th Blois conference, Hamburg"
      eprint    = "arXiv:0708.1156 [hep-ph]",
-     SLACcitation  = "%%CITATION = ARXIV:0708.1156;%%"
 }
 
 @Article{islam09,
@@ -315,6 +313,21 @@
       pages          = "461",
       doi            = "10.1016/0550-3213(75)90514-3",
       year           = "1975",
+}
+
+@Article{guichon03,
+      author         = "Guichon, Pierre A.M. and Vanderhaeghen, M.",
+      title          = "How to reconcile the Rosenbluth and the polarization
+                        transfer method in the measurement of the proton
+                        form-factors",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "91",
+      pages          = "142303",
+      doi            = "10.1103/PhysRevLett.91.142303",
+      year           = "2003",
+      eprint         = "hep-ph/0306007",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
 }
 
 @Article{kelly04,
